components/gatekeeper-constraints/k8sprohibitedannotations-disallow-gateway-template.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedAnnotations
metadata:
  name: disallow-gateway-template
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: maistra.io/member-of
          operator: Exists
    excludedNamespaces:
      - istio-system
  parameters:
    message: "Disallow `abd` annotation with a value of `true`."
    annotations:
      - key: abc
        # Matches email address or github user
        allowedRegex: ^true$
