components/gatekeeper-constraints/k8sprohibitedannotations-prohibit-gateway-injection-for-non-ingress.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitedAnnotations
metadata:
  name: prohibit-gateway-injection
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: maistra.io/member-of
          operator: Exists
    excludedNamespaces:
      - istio-ingress
  parameters:
    message: "Disallow `inject.istio.io/templates` annotation with a value of `gateway` for non ingress namespaces."
    annotations:
      - key: "inject.istio.io/templates"
        # Matches email address or github user
        prohibitedRegex: ^gateway$
