components/gatekeeper-constraints/k8srequiredannotations-require-gateway-template-annotation.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: require-gateway-template-annotation
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: istio.io/rev
          operator: Exists
    namespaces:
      - "*istio-ingress" 
    excludedNamespaces:
      - istio-system
  parameters:
    message: "Pods in gateway namespaces must have a `inject.istio.io/templates` annotation with a value of `true`."
    annotations:
      - key: inject.istio.io/templates
        allowedRegex: ^true$
