components/gatekeeper-constraints/k8srequiredcontainernames-require-istio-proxy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredContainerNames
metadata:
  name: require-istio-proxy
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: istio.io/rev
          operator: Exists
    excludedNamespaces:
      - istio-system
  parameters:
    message: "The pod should have an istio-proxy sidecar container injected"
    containers:
      - name: istio-proxy
